--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  convert: ^3.0.0
+  http: ^0.13.3
+  intl: ^0.17.0
   flutter:
     sdk: flutter
 
@@ -55,6 +58,12 @@ flutter:
     - assets/img/paisaje3.jpg
     - assets/img/paisaje4.jpg
     - assets/img/paisaje5.jpg
+    - assets/data/hiker_data.json
+    - assets/img/hike/hike-desert-1.jpg
+    - assets/img/hike/hike-mountain-1.jpg
+    - assets/img/hike/hike-mountain-2.jpg
+    - assets/img/hike/hike-mountain-3.jpg
+    - assets/img/hike/hike-mountain-4.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
